# hpw-convert-eip681

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
core/: Cargo.toml
core/src/: address.rs  amount.rs  constants.rs  currency.rs  error.rs  lib.rs  link.rs  parse.rs
core/tests/: parse.rs
wasm/: Cargo.toml
wasm/scripts/: finalize-package.mjs
wasm/src/: lib.rs
wasm/tests/: smoke.mjs
wasm/types/: errors.d.ts
