[package]
name = "hpw-convert-eip681"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Unofficial, unaffiliated parser that converts HashPort Wallet JPYC payment links into EIP-681 (ERC-681) payment URIs. Not endorsed by or affiliated with HashPort."
keywords = ["ethereum", "eip681", "jpyc", "polygon", "wallet"]
categories = ["parser-implementations"]

[dependencies]
url = "2.5"
alloy-primitives = { version = "1", default-features = false, features = ["std"] }
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]
