[package]
name = "hpw-convert-eip681-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hpw-convert-eip681 = { path = "../core", features = ["serde"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]
